# jira-simulator

./: .env.example  .gitignore  AGENTS.md  HANDOFF.md  README.md  agent_instruction.md  assumptions.md  boxplot-prototype.html  cc-initiate-project.md  changelog.md  ci-test.txt  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  stage-0-prompt.md  stage-1-prompt.md  stage2.md  stage3.md  stage4.md  test-boxplot.spec.ts
backend/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_dysfunction_details_and_dependencies.py  003_add_jira_bootstrap_fields_to_teams.py  004_create_jira_config_table.py  005_create_jira_write_queue_table.py  006_create_jira_issue_map_table.py  007_create_jira_issue_links_table.py  008_stage4_schema.py  009_engine_rewrite.py  010_move_left_story_points.py  011_timing_templates.py  012_scheduled_events.py
backend/app/: config.py  database.py  main.py
backend/app/api/: dependencies.py
backend/app/engine/: backlog.py  calendar.py  capacity.py  distributions.py  event_auditor.py  event_dispatcher.py  issue_state_machine.py  precompute.py  sim_clock.py  simulation.py  snapshots.py  sprint_cadence.py  sprint_lifecycle.py  sprint_overlap.py  template_engine.py  types.py  workflow_engine.py
backend/app/integrations/: alerting.py  exceptions.py  jira_bootstrapper.py  jira_client.py  jira_health.py  jira_write_queue.py  scheduler.py
backend/app/models/: __init__.py  base.py  issue.py  (+21 more)
backend/tests/: conftest.py
(+176 files in other folders)
